syntax = "proto3";

package pb;

import "patient.proto";

option go_package = "github.com/ofagbola/Editor-RPM-Backend/authentication/pb";

message UpdatePatientRequest {
    string username = 1;
    repeated string medical_history = 2;
    optional string provider = 3;
    optional string out_of_network_expenses = 4;
    optional string out_of_pocket_expenses = 5;
    optional string image = 6;
    optional string co_pay = 7;
}

message UpdatePatientResponse {
    Patient patient = 1;
}